# random-carnegie

./: Cargo.toml  Readme.md  Trunk.toml  check.sh  index.html
docs/: index.html  random-carnegie-a713afcc9720dc00.js  random-carnegie-a713afcc9720dc00_bg.wasm  random-carnegie-b760687b56da66ad.js  random-carnegie-b760687b56da66ad_bg.wasm  styles-f48dc2694e17fc4e.css
src/: buildings.rs  main.rs  setup.rs
static/: styles.scss
