[package]
name = "random-carnegie"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.10", default-features = false, features = ["js"] }
gloo-history = { version = "0.2.1", default-features = false }
gloo-storage = { version = "0.3.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rand_pcg = { version = "0.3.1", default-features = false }
serde = { version = "1.0.189", default-features = false, features = ["serde_derive"] }
serde_repr = { version = "0.1.16", default-features = false }
web-sys = { version = "0.3.64", default-features = false, features = ["HtmlTextAreaElement", "HtmlSelectElement"] }
yew = { version = "0.21.0", default-features = false, features = ["csr"] }
yew-bootstrap = { git = "https://github.com/alexkazik/yew-bootstrap.git", branch = "icons", default-features = false }
yew-router = { version = "0.18.0", default-features = false }
yewdux = { version = "0.9.4", default-features = false }

[[bin]]
name = "copy-bootstrap-icons"

[[bin]]
name = "version"
